--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,6 +1,53 @@
-.products{
+/* .products{
     display: grid;
     gap: 1rem;
-    margin: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: auto auto auto;
 }
+
+@media only screen and (max-width: 500px) {
+    .products{
+        grid-template-columns: auto;
+    }
+} */
+.sticky{
+    position: fixed;
+}
+
+button {
+ color: #090909;
+ padding: 0.7em 1.7em;
+ font-size: 18px;
+ border-radius: 0.5em;
+ background: #e8e8e8;
+ border: 1px solid #e8e8e8;
+ transition: all .3s;
+ box-shadow: 6px 6px 12px #c5c5c5,
+             -6px -6px 12px #ffffff;
+}
+
+button:hover {
+ border: 1px solid white;
+}
+
+button:active {
+ box-shadow: 4px 4px 12px #c5c5c5,
+             -4px -4px 12px #ffffff;
+}
+
+.button2{
+    background-color: #212121;
+    color: white;
+    border: 1px solid #212121;
+}
+
+.button2:hover {
+    border: 1px solid #121212;
+   }
+   
+
+@media only screen and (max-width: 500px) {
+    button {
+        padding: 0;
+        font-size: 14px;
+       }
+    }
