--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -59,11 +59,28 @@
     box-shadow: 4px 4px 12px #212121,
                 -4px -4px 12px #121212;
 }
+
+.selected-product {
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-style: italic;
+    letter-spacing: 0.05em;
+    color: #3b3b3b;
+  }
    
 
 @media only screen and (max-width: 500px) {
     .button1, .button2 {
         padding: .2px;
         font-size: 14px;
+       }
+
+       .text-design{
+           font-size: 24px;
+       }
+
+       .selected-product{
+           font-size: 16px;
        }
     }
